--- a/楞嚴經/卷07.md
+++ b/楞嚴經/卷07.md
@@ -64,9 +64,883 @@
 
 　　大佛頂如來放光悉怛多鉢怛囉菩薩萬行品，灌頂部錄出，一名中印度那蘭陀曼茶羅灌頂金剛大道場神呪
 
-　　◎南牟薩怛他蘇伽哆耶(歸命一切諸佛)(一)　阿囉訶帝三藐三菩陀耶(歸命一切如來應正等覺)(二)　娜牟薩婆勃陀(敬禮一切諸佛)(三)　勃地薩哆吠弊(歸命菩薩)(毘㖿反)(四)　娜牟颯哆喃三藐三菩陀俱胝喃(敬禮正遍知)(五)　薩失囉(引)皤(去)迦僧伽喃(敬禮辟支佛及四果人)(六)　娜牟嚧雞阿囉喝哆喃(歸命羅漢等眾)(七)　娜牟蘇嚕哆半那喃(八)　娜牟塞羯唎(二合)陀(引)伽(輕去)彌喃(敬禮斯陀含阿那含眾)(九)　娜牟盧鷄三藐伽哆喃(敬禮過去未來)(十)　娜牟三藐鉢囉(二合)底半那(去)喃(十一)　娜牟提婆唎史喃(敬禮三十三天及一切諸仙天等)(十二)　娜牟微悉陀耶微(入聲呼)地也(二合)陀囉喃(敬禮呪仙)(十三)　娜牟悉陀微地也(二合)陀囉㗚史喃(敬禮持呪成就仙人)(十四)　舍波(去)拏揭囉訶娑訶摩囉陀(二合)喃(攝惡作善)(十五)　娜牟皤囉(二合)訶摩(二合)埿(歸命梵天)(十六)　娜牟因(去)陀囉(二合)耶(歸命帝釋)(十七)　娜牟婆伽嚩帝(歸命世尊)(十八)　嚕陀囉(二合)(引)耶(大自在天)(十九)　烏摩鉢底(天后)娑醯夜耶(及眷屬等)(二十)　娜牟婆伽筏(蒱末反)帝(世尊)(二十一)　那囉延拏耶(地祇眾)(二十二)　半遮摩訶沒陀囉(大印)(二十三)　娜牟塞訖哩(二合)多耶(頂禮世尊)(二十四)　娜牟婆伽(上呼)筏帝摩訶迦囉耶(大黑天神)(二十五)　底哩(二合)補囉那伽(上)囉(城)(二十六)　毘陀囉皤拏迦囉耶(破壞)(二十七)　阿底目多迦尸摩舍那縛悉埿(尸陀林中)(二十八)　摩怛唎(二合)伽拏(鬼神眾)(二十九)　娜牟塞訖唎多耶(三十)　娜牟婆伽筏帝(舊)怛他揭多俱囉耶(如來族)(三十一)　娜牟鉢頭摩(二合)俱囉耶(歸命蓮華族菩薩等)(三十二)　娜牟筏折囉俱囉(半音用，同下)耶(歸命金剛族)(三十三)　娜牟摩尼俱囉耶(歸命寶族)(三十四)　娜牟伽(上)闍俱囉耶(歸命眾族)(三十五)　娜牟婆伽筏帝(三十六)　地唎(二合)茶輸囉哂那(三十七)　鉢囉(二合)訶囉拏囉(引)闍耶(大猛將各持器仗入)(三十八)　怛他揭多耶(如來)(三十九)　娜牟婆伽筏帝(四十)　阿彌陀(引)婆(引)耶(無量壽佛)(四十一)　怛他揭多耶(四十二)　阿囉訶帝三藐三菩陀耶(應等正覺)(四十三)　娜牟婆伽筏帝(四十四)　阿芻鞞也(阿閦如來)(四十五)　怛他揭多耶(四十六)　阿羅訶帝三藐三菩陀耶(四十七)　娜牟婆伽筏帝(四十八)　毘沙闍俱嚕(二合)吠䟽璃唎耶(藥師如來)(四十九)　鉢囉(二合)婆囉(引)闍耶(光王)(五十)　怛他揭多耶(五十一)　阿囉訶帝三藐三菩陀耶(五十二)　娜牟婆伽筏帝(五十三)　三布瑟畢多娑囉囉(引)闍夜(娑羅花王)(五十四)　怛他揭多耶(五十五)　阿囉訶帝三藐三菩陀(引)耶(五十六)　娜牟婆伽筏帝(五十七)　舍枳也(二合)母娜曳(釋迦牟尼佛)(五十八)　怛他揭多耶(五十九)　阿囉訶帝三藐三菩陀(引)耶(六十)　娜牟婆伽筏帝(六十一)　囉怛那俱蘇摩(寶花)(六十二)　鷄都囉(引)闍耶(寶幢王如來)(六十三)　怛他揭多耶(六十四)　阿羅訶帝三藐三菩陀(引)耶帝瓢(六十五)　娜牟塞訖哩(二合)多皤翳摩含婆伽筏多(六十六)　薩怛他揭都烏瑟尼衫(如來佛頂)(六十七)　悉怛多(引)鉢怛㘕(二合)(華蓋)(六十八)　娜牟阿波(引)囉支單(半音)(敬禮是辰勝)(六十九)　鉢羅登(登甑反)擬(擬異反)囉(七十)　薩嚩部多揭囉(二合)訶迦囉尼(一切神眾作罰)(七十一)　波囉微(入)地也(二合)掣(車曳反)陀(輕呼)儞(能斷他呪)(七十二)　阿哥(引)囉(輕呼)微哩(入)(二合)駐(橫死)(七十三)　波唎怛囉耶(引)那揭唎(救取)(七十四)　薩嚩畔陀那𢛡乞叉那迦唎(一切縛禁解脫)(七十五)　薩嚩突瑟吒(二合)(除一切惡)(七十六)(上)　突莎般那儞縛囉尼(惡夢)(七十七)　者都囉(引)室底喃(八萬四千眾神)(七十八)　揭囉訶娑訶娑囉(引)喃(七十九)　微陀防娑(引)那羯哩(打破)(八十)　阿瑟吒氷設底喃(去聲呼)(八十一)(呼皆同)　諾剎怛囉喃(八十二)　鉢囉(二合)娑(引)陀那羯哩(正行)阿瑟吒(二合)喃(八十三)　摩訶揭囉訶喃(辰)(八十四)　微陀防(二合)薩那羯哩(打破)(八十五)　薩嚩舍都嚕(二合)儞嚩囉尼(除一切惡)(八十六)　巨(去)囉喃(八十七)　突室乏(二合)鉢那難遮那舍尼(除却嚴惡)(八十八)　毘沙設薩怛囉(器仗)(八十九)　阿祁尼(火)(九十)　烏陀迦囉尼(水)(九十一)　阿波(引)囉視多具囉(苻能勝嚴)(九十二)　摩訶跋囉戰拏(大力嗔怒)(九十三)　摩訶提哆(火天)(九十四)　摩訶帝闍(大滅)(九十五)　摩訶稅尾(二合)多(太白)(九十六)　什伐(二合)囉(光焰)(九十七)　摩訶跋囉(大力)(九十八)　半茶囉嚩(引)悉儞(白拂)(九十九)　阿唎耶多囉(聖者)(一百)　毘哩(二合)俱知制嚩毘闍耶(最勝菩薩)(百一)　筏折囉(二合)摩禮底毘輸嚕多(摧碎金剛)(百二)　鉢踏罔迦(降伏)(百三)　跋折囉兒(熾曳反)訶縛者(金剛力士)(百四)　摩囉制縛(隨一逐)(百五)　般囉室多(金剛神杵)(百六)　跋折(時熱反)(上)囉(二合)檀持(金剛神杵)(百七)　毘舍羅摩遮(天神力士)(百八)　扇多舍毘提嚩布室哆蘇摩嚕波(參辰日月天子及二十八宿)(百九)　摩訶(引)稅尾(二合)多(引)(太白星)(百十)　阿哩耶多羅(百十一)　摩訶(引)跋囉阿波囉(百十二)　跋折囉(二合)商羯囉制婆(金剛連鎖)(百十三)　怛他(天可反)跋折囉俱摩唎迦(金剛童女)(百十四)　俱㘕(盧紺反)咃唎(金剛童子)(百十五)　跋折囉訶薩哆者(二合)(金剛手)(百十六)　微地也(大明呪藏)(百十七)　乾遮那摩(引)唎迦(四天王太子)(百十八)　俱蘇婆喝囉怛囉怛那(百十九)　毘嚕遮耶那俱唎耶(百二十)　韜淡(吐炎)夜囉烏瑟尼(二合)沙(佛頂)(百二十一)　毘折藍婆摩邏遮(羅剎神女)(百二十二)　跋折囉(二合)迦那迦(金剛使者)(百二十三)　鉢囉(二合)婆咾(去)遮那(蓬華神眾)(百二十四)　跋折囉(二合)敦尼遮(金剛擎山)(百二十五)　稅尾多遮迦摩(引)囉(引)乞叉(二合)(百二十六)　舍施鉢囉(二合)婆翳帝夷帝(如是等)(百二十七)　母(引)陀囉(二合)尼揭拏(眾印可)(百二十八)　娑吠囉乞懺(二合)(一切護我)(百二十九)　俱囉飯(二合)都印㝹那麼麼(某乙稱名)那寫(誦呪者但至此語皆自稱名)(百三十)　嗚吽(二合)牟哩(二合)瑟揭(二合)(渠羯反)(皆同)拏(仙眾)(百三十一)　鉢囉(二合)舍(引)薩多(善相)(百三十二)　薩怛他揭都(一切如來)(百三十三)　烏瑟尼沙(百三十四)　呼吽(二合)咄嚕吽(三合)(警誤)(百三十五)　瞻婆那(押領)(百三十六)　呼吽(二合)咄嚕吽(三合)(百三十七)　薩耽婆那(鎮守)(百三十八)　呼吽(二合)咄嚕吽(三合)(百三十九)　婆囉微地也三婆乞叉那囉(百四十)　呼吽(二合)咄嚕吽(三合)(百四十一)　薩婆部瑟吒喃(百四十二)　塞曇婆那羯囉(喫却他呪)(百四十三)　呼吽(二合)咄嚕吽(三合)(百四十四)　薩嚩藥叉(勇猛)(百四十五)　喝囉(引)剎娑揭囉訶喃(百四十六)　毘陀防娑那羯囉(打破)(百四十七)　呼吽(二合)咄嚕吽(三合)(百四十八)　者都羅尸底喃(百四十九)　揭囉訶娑囉喃(八萬四千神王眾)(百五十)　毘陀防娑那羯囉(百五十一)　呼吽(二合)咄嚕吽(三合)(百五十二)　阿瑟吒微(二合)摩舍帝喃(上)(百五十三)　那佉(上)沙怛囉喃(上)(百五十四)　婆囉摩馱那伽囉(百五十五)　呼吽(二合)咄嚕吽(三合)(百五十六)　囉剎囉剎(護一切諸佛菩薩金剛天仙皆護)(百五十七)　薄伽梵(佛)(百五十八)　薩怛他揭都烏瑟尼沙(佛頂)(百五十九)　鉢囉登擬哩(百六十)　摩訶薩訶薩囉部兒(千臂大神)(百六十一)　娑訶薩囉室曬(千頭神)(百六十二)　俱胝舍多娑訶薩囉寧怛㘑(百千眼神)(百六十三)　阿弊地也什嚩哩多那吒迦(百六十四)　摩訶跋折嚕陀(引)囉(大輪金剛)(百六十五)　帝哩菩嚩那(三世)(百六十六)　曼茶囉(檀場)(百六十七)　嗚吽莎悉底(百六十八)　薄婆都(與我平等)(百六十九)　印㝹麼麼(某乙)(百七十)　囉闍婆夜(王難)(百七十一)　主囉婆夜(賊難)(百七十二)　阿祇尼婆夜(火難)(百七十三)　烏陀迦婆夜(水難)(百七十四)　吠沙婆夜(毒難)(百七十五)　舍薩多囉婆夜(刀仗難)(百七十六)　波囉斫羯囉婆夜(兵難)(百七十七)　突㗚叉婆夜(穀貴飢饉難)(百七十八)　阿舍儞婆夜(雹難)(百七十九)　阿迦囉沒㗚(利吉反)駐婆夜(掩死難)(百八十)　阿陀囉尼部彌劍波(總持地動)(百八十一)　伽波哆婆夜(險難)(百八十二)　烏囉囉迦波多婆夜(道路難)(百八十三)　囉闍彈茶婆夜(王刑罰難)(百八十四)　那(上)伽婆夜(龍怖難)(百八十五)　微地揄婆夜(閃電難)(百八十六)　蘇跋㗚尼婆夜(金翄鳥難)(百八十七)　藥叉揭囉訶(百八十八)　羅剎娑揭囉訶(百八十九)　畢唎哆揭囉(二合)訶(餓鬼難)(百九十)　毘舍(上)遮揭囉訶(廁神)(百九十一)　部多揭囉(二合)訶(神鬼眾)(百九十二)　鳩槃茶揭囉訶(守宮婦女鬼)(一百九十三)　布單那揭囉(二合)訶(魄鬼)(百九十四)　羯吒布單那揭囉(二合)訶(奇魄鬼)(一百九十五)　塞揵陀揭囉訶(鳩摩羅童天子)(百九十六)　阿婆娑摩囉揭囉(二合)訶(羊頭鬼)(百九十七)　烏檀摩陀揭囉(二合)訶(熱鬼)(百九十八)　車耶揭囉(二合)訶(影鬼)(百九十九)　梨婆底揭囉訶(陰謀鬼)(二百)　闍底訶哩泥(食初產鬼)(二百一)　羯囉婆訶哩埿(食懷孕鬼)(二百二)　嚧地囉訶哩泥(食血鬼)(二百三)　芒娑訶哩泥(食肉鬼)(二百四)　計陀訶哩泥(食脂鬼)(二百五)　摩闍訶哩(輕呼)(去聲)泥(食髓鬼)(二百六)　闍多訶哩泥(食氣鬼)(二百七)　視吠哆訶哩泥(食壽命鬼)(二百八)　婆多訶哩泥(食風鬼)(二百九)　皤多訶哩喃阿輸遮訶哩泥(食不淨鬼)(二百一十)　質多訶哩泥(食心鬼)(二百十一)帝衫薩毘衫(如是等眾)(二百十二)　薩嚩揭囉訶喃(一切執祖鬼)(二百十三)　毘地也(明呪藏)(二百十四)　嗔陀夜彌(斬伐罪者)(二百十五)　枳囉夜彌(二百十六)　波哩跋囉斫迦羅(外道)(二百十七)　訖哩(離枳反)(上)擔微地也(明呪藏)(二百十八)　嗔陀夜彌(二百十九)　枳囉夜彌(捕罰)(二百二十)　茶枳尼(狐魅鬼)(二百二十一)　訖哩擔微地也(明呪)(二百二十二)　嗔陀夜彌枳囉夜彌(二百二十三)　摩訶鉢輸鉢底夜(二百二十四)　嚕陀囉(大自在天)(二百二十五)　訖哩耽微地也(明呪)(二百二十六)　嗔陀夜彌枳羅夜彌(二百二十七)　那囉耶拏耶(天神)(二百二十八)　訖哩耽微地也(明呪)(二百二十九)　嗔陀夜彌枳囉夜彌(二百三十)　怛怛嚩伽(上)嚕茶(金翅鳥王)(二百三十一)　訖哩耽微地也(二百三十二)　嗔陀夜彌枳羅夜彌(二百三十三)　摩訶迦羅(大黑天神)(二百三十四)　摩怛囉伽拏訖哩(離枳反)(上)耽微地也(二百三十五)　嗔陀夜彌枳羅夜彌(二百三十六)　迦波哩迦(髑髏外道)(二百三十七)　訖哩耽微地也(二百三十八)　嗔陀夜彌枳囉夜彌(二百三十九)　闍夜羯囉(二百四十)　曼度羯囉(二百四十一)　薩婆囉他娑達儞(持一切物)(二百四十二)　訖哩耽微地也(二百四十三)　嗔陀夜彌枳囉夜彌(二百四十四)　者都㗚(利吉反)薄祁儞(姊妹神女)(二百四十五)　訖哩耽微地也(二百四十六)　嗔陀夜彌(二百四十七)　枳囉夜彌(二百四十八)　憑(去)儀哩知(鬪戰勝神并器仗)(二百四十九)　難泥(外道)雞首婆囉(孔雀王器仗)(二百五十)　伽那鉢底(毘那夜迦王)(二百五十一)　娑醯夜(野叉王兄弟三人各領二十八萬眾)(二百五十二)　訖哩耽微地也(二百五十三)　嗔陀夜彌(二百五十四)　枳囉夜彌(二百五十五)　那延那室囉(引)婆拏(裸形外道)(二百五十六)　訖哩(離吉反)(皆同)耽微地也(二百五十七)　嗔陀夜彌(二百五十八)　枳囉夜彌(二百五十九)　阿囉訶多(羅漢)(二百六十)　訖哩耽微地也(二百六十一)　嗔陀夜彌(二百六十二)　枳囉夜彌(二百六十三)　微怛(多音)囉(引)迦(起尸鬼)(二百六十四)　訖哩耽微地也(二百六十五)　嗔陀夜彌(二百六十六)　枳囉夜彌(二百六十七)　跋折(時熱反)囉波儞(執金剛神)(二百六十八)　跋折囉婆(重呼)尼(二百六十九)　具醯夜迦(密跡力士)(二百七十)　地鉢底(總管)(二百七十一)　訖哩耽微地也(二百七十二)　嗔陀夜彌枳羅夜彌(二百七十三)　囉叉囉叉罔(一切諸佛菩薩天仙龍神方護)(二百七十四)　薄伽梵(佛)(二百七十五)　印㝹那麼麼那寫(某乙寫)(二百七十六)　婆伽梵薩怛他揭都烏瑟尼沙(二百七十七)　悉怛多鉢怛囉(華蓋)(二百七十八)　南無嗉(上)都(上)羝(頂禮)(二百七十九)　阿悉多那(引)囉(引)囉迦(白光分明)(二百八十)　鉢囉婆毘薩普吒(二百八十一)　毘迦悉怛多(二百八十二)　鉢底哩(二百八十三)　什嚩囉什嚩囉(光焰)(二百八十四)　陀囉陀囉(二百八十五)　頻陀囉頻陀囉(二百八十六)　嗔陀嗔陀(二百八十七)　含吽含吽(二百八十八)　泮泮泮(二百八十九)　泮吒泮吒(二百九十)　莎皤訶(二百九十一)　醯醯泮(二百九十二)　阿牟伽耶泮(不空大使)(二百九十三)　阿鉢囉底訶多泮(無障礙)(二百九十四)　皤囉鉢囉(二合)陀泮(與願)(二百九十五)　阿素囉毘陀囉皤迦泮(修羅破壞)(二百九十六)　薩皤提吠弊泮(一切天神)(二百九十七)　薩皤那那伽弊泮(一切龍眾)(二百九十八)　薩皤藥叉弊泮(一切勇鬼神)(二百九十九)　薩皤乾闥婆弊泮(一切音樂神)(三百)　薩皤阿素囉弊泮(三百一)　薩皤揭嚕茶弊泮(三百二)　薩皤緊那羅弊泮(三百三)　薩皤摩護囉伽弊泮(三百四)　薩皤囉剎莎弊泮(三百五)　薩皤摩努曬弊泮(三百六)　薩皤阿摩努曬弊泮(三百七)　薩皤布單那弊泮(三百八)　薩皤迦吒布丹那弊泮(三百九)　薩皤突蘭枳帝弊泮(一切難過)(三百十)　薩皤突瑟吒畢哩乞史帝弊泮(一切難)(三百十一)　薩皤什皤梨弊泮(一切瘧壯熱)(三百十二)　薩皤阿波薩麼嚟弊泮(一切外道出)(三百十三)　薩婆奢羅皤拏弊泮(三百十四)　薩嚩底㗚耻雞弊泮(三百十五)　薩菩怛波提弊泮(一切鬼惡)(三百十六)　薩皤微地也囉誓遮黎弊泮(一切持呪博士等)(三百十七)　闍耶羯囉摩度羯囉(三百十八)　薩婆囉他娑陀雞弊泮(一切物呪博士)(三百十九)　微地也遮唎曳弊泮(三百二十)　者咄囉南薄祁儞弊泮(四姊妹神女)(三百二十一)　跋折囉俱摩唎迦弊泮(金剛童子)(三百二十二)　跋折囉俱藍陀利弊泮(三百二十三)　微地也囉(引)闍弊泮(呪王等)(三百二十四)　摩訶鉢囉登耆囇弊泮(三百二十五)　跋折囉商羯囉(引)夜泮(金剛連鎖)(三百二十六)　鉢囉登祁囉囉(引)闍(引)耶泮(三百二十七)　摩訶揭囉耶泮(大黑天神)(三百二十八)　摩訶摩怛哩(二合)伽拏耶泮(鬼眾)(三百二十九)　娜牟塞揭哩(二合)多耶泮(三百三十)　毘瑟拏尾曳泮(毘紐天子)(三百三十一)　皤囉𤙖摩尼曳泮(梵王)(三百三十二)　阿祁尼曳泮(火天)(三百三十三)　摩訶迦哩曳泮(大黑天女)(三百三十四)　迦囉檀特曳泮(大鬼帥黑奧神)(三百三十五)　瞖泥哩曳泮(帝釋)(三百三十六)　遮文遲曳泮(怒神)(三百三十七)　嘮怛哩曳泮(瞋怒神)(三百三十八)　迦囉(引)怛哩曳泮(三百三十九)　迦波嚟曳泮(三百四十)　阿地目抧多迦尸麼舍那皤悉儞曳泮(三百四十一)　曳髻者那薩怛薩怛皤(若有眾生)(三百四十二)　突瑟吒質多(惡心鬼)(三百四十三)　澇持囉質多(三百四十四)　烏闍訶囉(食精氣鬼)(三百四十五)　揭婆訶囉(食胎藏鬼)(三百四十六)　嘮地囉訶囉(食血鬼)(三百四十七)　芒娑訶囉(食肉鬼)(三百四十八)　摩社訶囉(食產鬼)(三百四十九)　社多訶囉(三百五十)　視微多訶囉(食壽命鬼)(三百五十一)　皤略耶訶囉(食祭鬼)(三百五十二)　健陀訶囉(食香鬼)(三百五十三)　布瑟波訶囉(食花鬼)(三百五十四)　破囉訶囉(食五果子鬼)(三百五十五)　薩寫訶囉(食五穀種子鬼)(三百五十六)　波波質多突瑟吒(知諫反)質多(惡心鬼)(三百五十七)　嘮陀羅質多(嗔心鬼)(三百五十八)　陀囉質多藥叉揭囉訶(三百五十九)　囉剎娑揭囉訶(三百六十)　閉囇多揭囉訶毘舍遮揭囉訶(三百六十一)　部多揭囉訶(神眾)(三百六十二)　鳩槃茶揭囉訶(三百六十三)　塞健陀揭囉訶(三百六十四)　烏怛摩陀揭囉訶(三百六十五)　車夜揭囉訶(影鬼)(三百六十六)　阿波娑摩囉揭囉訶(羊嗔鬼鬼如野狐)(三百六十七)　侘(坼阿反)(上)(長平呼)迦茶祁尼揭囉訶(魅鬼魅女鬼)(三百六十八)　𠼝婆底揭囉訶(如狗惱小鬼)(三百六十九)　闍弭迦揭囉訶(如烏鬼)(三百七十)　舍俱尼揭囉訶(如馬)(三百七十一)　漫怛囉難提迦揭囉訶(如猫兒)(三百七十二)　阿藍皤揭囉訶(如蛇)(三百七十三)　訶奴建度波尼揭囉訶(如雞)(三百七十四)　什(入音)皤囉(壯熱瘧鬼)翳迦醯迦(一日一發)德吠底迦(二日一發)(三百七十五)　帝哩帝藥迦(三日一發)折咄㗚他迦(四日一發)(三百七十六)　眤底夜什皤囉(常壯熱鬼)(三百七十七)　毘沙摩什皤囉(壯熱)(三百七十八)　皤底迦(風病鬼)背底迦(黃病鬼)(三百七十九)　室禮瑟彌迦(痰飲)(三百八十)　娑儞波底迦(痢病)(三百八十一)　薩皤什皤囉(一切壯熱)(三百八十二)　室嚕喝囉底(頭痛)(三百八十三)　阿羅陀皤帝(半頭痛)(三百八十四)　阿乞史嚧劍(飢不食鬼)(三百八十五)　目佉嚧鉗(口痛)(三百八十六)　羯唎突嚧鉗(愁鬼)(三百八十七)　羯囉訶輸藍(咽喉痛)(三百八十八)　羯拏輸藍(耳痛)(三百八十九)　檀多輸藍(齒痛)(三百九十)　頡哩馱耶輸藍(心痛)(三百九十一)　末摩輸藍(盧鉗反)(三百九十二)　跋囉㗌婆輸藍(肋痛)(三百九十三)　背哩瑟吒輸藍(背痛)(三百九十四)　烏馱囉輸藍(盧鉗反)(腹痛)(三百九十五)　羶知輸藍(腰痛)(三百九十六)　跛悉帝輸藍(裸骨痛)(三百九十七)　鄔(上)嚧輸藍(腿髀痛)(三百九十八)　常伽輸藍(腕痛)(三百九十九)　喝薩多輸藍(手痛)(四百)　波陀輸藍(脚痛)(四百一)　頞伽鉢囉登輸藍(四支節痛)(四百二)　部多吠怛茶(起尸鬼)(四百三)　茶枳(呼哽反)(上)尼(魅鬼)(四百四)　什皤囉陀突盧建紐(四百五)　吉知(蜘蛛)婆路多(丁瘡)(四百六)　吠薩囉波嚕訶(侵淫瘡)凌(里孕反)伽(赤瘡)(四百七)　輸沙多(引)囉娑那迦囉毘沙喻迦(上坎)(四百八)　阿祁尼(火)烏陀迦(水)摩囉吠囉建多囉(四百九)　阿迦囉蜜㗚(二合)駐(橫死)(四百十)　怛囇部迦地哩囉吒毘失脂迦(蝎)(四百十一)　薩囉波(蛇)(四百十二)　那俱囉(虎狼)(四百十三)　僧(思孕反)伽(師子)(四百十四)　吠也揭囉(大虫)(四百十五)　怛乞叉(猪熊)(四百十六)　怛囉乞叉末囉(馬熊)視皤帝衫(此等)(四百十七)　薩毘衫薩毘衫(一切此說者)(四百十八)　悉怛多鉢怛囉(花蓋)(四百十九)　摩訶跋折嚕(大金剛藏)(四百二十)　瑟尼衫摩訶鉢囉登祁藍(四百二十一)　夜婆埵陀舍喻社那(乃至十二由旬成界地)(四百二十二)　便怛囇拏毘(入聲)地夜畔馱迦嚧彌(云我大明呪十二由旬結界禁縛莫入)(四百二十三)　帝殊畔陀迦(居那反)嚧彌(佛頂光聚縛結不得入界)(四百二十四)　波囉微地也(途迦反)畔陀迦嚧彌(能縛一切惡神鬼)(四百二十五)　怛地他(即說呪曰)(四百二十六)　唵(四百二十七)　阿那㘑毘舍提(四百二十八)　鞞囉(四百二十九)　跋折囉(四百三十)　阿唎畔陀(四百三十一)　毘陀儞(四百三十二)　跋折囉波尼泮(四百三十三)　呼吽(四百三十四)　咄嚕吽(三合)(四百三十五)　莎皤訶(四百三十六)　唵吽(四百三十七)　毘嚕提(四百三十八)　莎皤訶(四百三十九)
+南牟薩怛他蘇伽哆耶(歸命一切諸佛)(一)
 
-　　　　右此呪句總有四百三十九句。
+阿囉訶帝三藐三菩陀耶(歸命一切如來應正等覺)(二)
+
+娜牟薩婆勃陀(敬禮一切諸佛)(三)
+
+勃地薩哆吠弊(歸命菩薩)(毘㖿反)(四)
+
+娜牟颯哆喃三藐三菩陀俱胝喃(敬禮正遍知)(五)
+
+薩失囉(引)皤(去)迦僧伽喃(敬禮辟支佛及四果人)(六)
+
+娜牟嚧雞阿囉喝哆喃(歸命羅漢等眾)(七)
+
+娜牟蘇嚕哆半那喃(八)
+
+娜牟塞羯唎(二合)陀(引)伽(輕去)彌喃(敬禮斯陀含阿那含眾)(九)
+
+娜牟盧鷄三藐伽哆喃(敬禮過去未來)(十)
+
+娜牟三藐鉢囉(二合)底半那(去)喃(十一)
+
+娜牟提婆唎史喃(敬禮三十三天及一切諸仙天等)(十二)
+
+娜牟微悉陀耶微(入聲呼)地也(二合)陀囉喃(敬禮呪仙)(十三)
+
+娜牟悉陀微地也(二合)陀囉㗚史喃(敬禮持呪成就仙人)(十四)
+
+舍波(去)拏揭囉訶娑訶摩囉陀(二合)喃(攝惡作善)(十五)
+
+娜牟皤囉(二合)訶摩(二合)埿(歸命梵天)(十六)
+
+娜牟因(去)陀囉(二合)耶(歸命帝釋)(十七)
+
+娜牟婆伽嚩帝(歸命世尊)(十八)
+
+嚕陀囉(二合)(引)耶(大自在天)(十九)
+
+烏摩鉢底(天后)娑醯夜耶(及眷屬等)(二十)
+
+娜牟婆伽筏(蒱末反)帝(世尊)(二十一)
+
+那囉延拏耶(地祇眾)(二十二)
+
+半遮摩訶沒陀囉(大印)(二十三)
+
+娜牟塞訖哩(二合)多耶(頂禮世尊)(二十四)
+
+娜牟婆伽(上呼)筏帝摩訶迦囉耶(大黑天神)(二十五)
+
+底哩(二合)補囉那伽(上)囉(城)(二十六)
+
+毘陀囉皤拏迦囉耶(破壞)(二十七)
+
+阿底目多迦尸摩舍那縛悉埿(尸陀林中)(二十八)
+
+摩怛唎(二合)伽拏(鬼神眾)(二十九)
+
+娜牟塞訖唎多耶(三十)
+
+娜牟婆伽筏帝(舊)怛他揭多俱囉耶(如來族)(三十一)
+
+娜牟鉢頭摩(二合)俱囉耶(歸命蓮華族菩薩等)(三十二)
+
+娜牟筏折囉俱囉(半音用，同下)耶(歸命金剛族)(三十三)
+
+娜牟摩尼俱囉耶(歸命寶族)(三十四)
+
+娜牟伽(上)闍俱囉耶(歸命眾族)(三十五)
+
+娜牟婆伽筏帝(三十六)
+
+地唎(二合)茶輸囉哂那(三十七)
+
+鉢囉(二合)訶囉拏囉(引)闍耶(大猛將各持器仗入)(三十八)
+
+怛他揭多耶(如來)(三十九)
+
+娜牟婆伽筏帝(四十)
+
+阿彌陀(引)婆(引)耶(無量壽佛)(四十一)
+
+怛他揭多耶(四十二)
+
+阿囉訶帝三藐三菩陀耶(應等正覺)(四十三)
+
+娜牟婆伽筏帝(四十四)
+
+阿芻鞞也(阿閦如來)(四十五)
+
+怛他揭多耶(四十六)
+
+阿羅訶帝三藐三菩陀耶(四十七)
+
+娜牟婆伽筏帝(四十八)
+
+毘沙闍俱嚕(二合)吠䟽璃唎耶(藥師如來)(四十九)
+
+鉢囉(二合)婆囉(引)闍耶(光王)(五十)
+
+怛他揭多耶(五十一)
+
+阿囉訶帝三藐三菩陀耶(五十二)
+
+娜牟婆伽筏帝(五十三)
+
+三布瑟畢多娑囉囉(引)闍夜(娑羅花王)(五十四)
+
+怛他揭多耶(五十五)
+
+阿囉訶帝三藐三菩陀(引)耶(五十六)
+
+娜牟婆伽筏帝(五十七)
+
+舍枳也(二合)母娜曳(釋迦牟尼佛)(五十八)
+
+怛他揭多耶(五十九)
+
+阿囉訶帝三藐三菩陀(引)耶(六十)
+
+娜牟婆伽筏帝(六十一)
+
+囉怛那俱蘇摩(寶花)(六十二)
+
+鷄都囉(引)闍耶(寶幢王如來)(六十三)
+
+怛他揭多耶(六十四)
+
+阿羅訶帝三藐三菩陀(引)耶帝瓢(六十五)
+
+娜牟塞訖哩(二合)多皤翳摩含婆伽筏多(六十六)
+
+薩怛他揭都烏瑟尼衫(如來佛頂)(六十七)
+
+悉怛多(引)鉢怛㘕(二合)(華蓋)(六十八)
+
+娜牟阿波(引)囉支單(半音)(敬禮是辰勝)(六十九)
+
+鉢羅登(登甑反)擬(擬異反)囉(七十)
+
+薩嚩部多揭囉(二合)訶迦囉尼(一切神眾作罰)(七十一)
+
+波囉微(入)地也(二合)掣(車曳反)陀(輕呼)儞(能斷他呪)(七十二)
+
+阿哥(引)囉(輕呼)微哩(入)(二合)駐(橫死)(七十三)
+
+波唎怛囉耶(引)那揭唎(救取)(七十四)
+
+薩嚩畔陀那𢛡乞叉那迦唎(一切縛禁解脫)(七十五)
+
+薩嚩突瑟吒(二合)(除一切惡)(七十六)(上)
+
+突莎般那儞縛囉尼(惡夢)(七十七)
+
+者都囉(引)室底喃(八萬四千眾神)(七十八)
+
+揭囉訶娑訶娑囉(引)喃(七十九)
+
+微陀防娑(引)那羯哩(打破)(八十)
+
+阿瑟吒氷設底喃(去聲呼)(八十一)(呼皆同)
+
+諾剎怛囉喃(八十二)
+
+鉢囉(二合)娑(引)陀那羯哩(正行)阿瑟吒(二合)喃(八十三)
+
+摩訶揭囉訶喃(辰)(八十四)
+
+微陀防(二合)薩那羯哩(打破)(八十五)
+
+薩嚩舍都嚕(二合)儞嚩囉尼(除一切惡)(八十六)
+
+巨(去)囉喃(八十七)
+
+突室乏(二合)鉢那難遮那舍尼(除却嚴惡)(八十八)
+
+毘沙設薩怛囉(器仗)(八十九)
+
+阿祁尼(火)(九十)
+
+烏陀迦囉尼(水)(九十一)
+
+阿波(引)囉視多具囉(苻能勝嚴)(九十二)
+
+摩訶跋囉戰拏(大力嗔怒)(九十三)
+
+摩訶提哆(火天)(九十四)
+
+摩訶帝闍(大滅)(九十五)
+
+摩訶稅尾(二合)多(太白)(九十六)
+
+什伐(二合)囉(光焰)(九十七)
+
+摩訶跋囉(大力)(九十八)
+
+半茶囉嚩(引)悉儞(白拂)(九十九)
+
+阿唎耶多囉(聖者)(一百)
+
+毘哩(二合)俱知制嚩毘闍耶(最勝菩薩)(百一)
+
+筏折囉(二合)摩禮底毘輸嚕多(摧碎金剛)(百二)
+
+鉢踏罔迦(降伏)(百三)
+
+跋折囉兒(熾曳反)訶縛者(金剛力士)(百四)
+
+摩囉制縛(隨一逐)(百五)
+
+般囉室多(金剛神杵)(百六)
+
+跋折(時熱反)(上)囉(二合)檀持(金剛神杵)(百七)
+
+毘舍羅摩遮(天神力士)(百八)
+
+扇多舍毘提嚩布室哆蘇摩嚕波(參辰日月天子及二十八宿)(百九)
+
+摩訶(引)稅尾(二合)多(引)(太白星)(百十)
+
+阿哩耶多羅(百十一)
+
+摩訶(引)跋囉阿波囉(百十二)
+
+跋折囉(二合)商羯囉制婆(金剛連鎖)(百十三)
+
+怛他(天可反)跋折囉俱摩唎迦(金剛童女)(百十四)
+
+俱㘕(盧紺反)咃唎(金剛童子)(百十五)
+
+跋折囉訶薩哆者(二合)(金剛手)(百十六)
+
+微地也(大明呪藏)(百十七)
+
+乾遮那摩(引)唎迦(四天王太子)(百十八)
+
+俱蘇婆喝囉怛囉怛那(百十九)
+
+毘嚕遮耶那俱唎耶(百二十)
+
+韜淡(吐炎)夜囉烏瑟尼(二合)沙(佛頂)(百二十一)
+
+毘折藍婆摩邏遮(羅剎神女)(百二十二)
+
+跋折囉(二合)迦那迦(金剛使者)(百二十三)
+
+鉢囉(二合)婆咾(去)遮那(蓬華神眾)(百二十四)
+
+跋折囉(二合)敦尼遮(金剛擎山)(百二十五)
+
+稅尾多遮迦摩(引)囉(引)乞叉(二合)(百二十六)
+
+舍施鉢囉(二合)婆翳帝夷帝(如是等)(百二十七)
+
+母(引)陀囉(二合)尼揭拏(眾印可)(百二十八)
+
+娑吠囉乞懺(二合)(一切護我)(百二十九)
+
+俱囉飯(二合)都印㝹那麼麼(某乙稱名)那寫(誦呪者但至此語皆自稱名)(百三十)
+
+嗚吽(二合)牟哩(二合)瑟揭(二合)(渠羯反)(皆同)拏(仙眾)(百三十一)
+
+鉢囉(二合)舍(引)薩多(善相)(百三十二)
+
+薩怛他揭都(一切如來)(百三十三)
+
+烏瑟尼沙(百三十四)
+
+呼吽(二合)咄嚕吽(三合)(警誤)(百三十五)
+
+瞻婆那(押領)(百三十六)
+
+呼吽(二合)咄嚕吽(三合)(百三十七)
+
+薩耽婆那(鎮守)(百三十八)
+
+呼吽(二合)咄嚕吽(三合)(百三十九)
+
+婆囉微地也三婆乞叉那囉(百四十)
+
+呼吽(二合)咄嚕吽(三合)(百四十一)
+
+薩婆部瑟吒喃(百四十二)
+
+塞曇婆那羯囉(喫却他呪)(百四十三)
+
+呼吽(二合)咄嚕吽(三合)(百四十四)
+
+薩嚩藥叉(勇猛)(百四十五)
+
+喝囉(引)剎娑揭囉訶喃(百四十六)
+
+毘陀防娑那羯囉(打破)(百四十七)
+
+呼吽(二合)咄嚕吽(三合)(百四十八)
+
+者都羅尸底喃(百四十九)
+
+揭囉訶娑囉喃(八萬四千神王眾)(百五十)
+
+毘陀防娑那羯囉(百五十一)
+
+呼吽(二合)咄嚕吽(三合)(百五十二)
+
+阿瑟吒微(二合)摩舍帝喃(上)(百五十三)
+
+那佉(上)沙怛囉喃(上)(百五十四)
+
+婆囉摩馱那伽囉(百五十五)
+
+呼吽(二合)咄嚕吽(三合)(百五十六)
+
+囉剎囉剎(護一切諸佛菩薩金剛天仙皆護)(百五十七)
+
+薄伽梵(佛)(百五十八)
+
+薩怛他揭都烏瑟尼沙(佛頂)(百五十九)
+
+鉢囉登擬哩(百六十)
+
+摩訶薩訶薩囉部兒(千臂大神)(百六十一)
+
+娑訶薩囉室曬(千頭神)(百六十二)
+
+俱胝舍多娑訶薩囉寧怛㘑(百千眼神)(百六十三)
+
+阿弊地也什嚩哩多那吒迦(百六十四)
+
+摩訶跋折嚕陀(引)囉(大輪金剛)(百六十五)
+
+帝哩菩嚩那(三世)(百六十六)
+
+曼茶囉(檀場)(百六十七)
+
+嗚吽莎悉底(百六十八)
+
+薄婆都(與我平等)(百六十九)
+
+印㝹麼麼(某乙)(百七十)
+
+囉闍婆夜(王難)(百七十一)
+
+主囉婆夜(賊難)(百七十二)
+
+阿祇尼婆夜(火難)(百七十三)
+
+烏陀迦婆夜(水難)(百七十四)
+
+吠沙婆夜(毒難)(百七十五)
+
+舍薩多囉婆夜(刀仗難)(百七十六)
+
+波囉斫羯囉婆夜(兵難)(百七十七)
+
+突㗚叉婆夜(穀貴飢饉難)(百七十八)
+
+阿舍儞婆夜(雹難)(百七十九)
+
+阿迦囉沒㗚(利吉反)駐婆夜(掩死難)(百八十)
+
+阿陀囉尼部彌劍波(總持地動)(百八十一)
+
+伽波哆婆夜(險難)(百八十二)
+
+烏囉囉迦波多婆夜(道路難)(百八十三)
+
+囉闍彈茶婆夜(王刑罰難)(百八十四)
+
+那(上)伽婆夜(龍怖難)(百八十五)
+
+微地揄婆夜(閃電難)(百八十六)
+
+蘇跋㗚尼婆夜(金翄鳥難)(百八十七)
+
+藥叉揭囉訶(百八十八)
+
+羅剎娑揭囉訶(百八十九)
+
+畢唎哆揭囉(二合)訶(餓鬼難)(百九十)
+
+毘舍(上)遮揭囉訶(廁神)(百九十一)
+
+部多揭囉(二合)訶(神鬼眾)(百九十二)
+
+鳩槃茶揭囉訶(守宮婦女鬼)(一百九十三)
+
+布單那揭囉(二合)訶(魄鬼)(百九十四)
+
+羯吒布單那揭囉(二合)訶(奇魄鬼)(一百九十五)
+
+塞揵陀揭囉訶(鳩摩羅童天子)(百九十六)
+
+阿婆娑摩囉揭囉(二合)訶(羊頭鬼)(百九十七)
+
+烏檀摩陀揭囉(二合)訶(熱鬼)(百九十八)
+
+車耶揭囉(二合)訶(影鬼)(百九十九)
+
+梨婆底揭囉訶(陰謀鬼)(二百)
+
+闍底訶哩泥(食初產鬼)(二百一)
+
+羯囉婆訶哩埿(食懷孕鬼)(二百二)
+
+嚧地囉訶哩泥(食血鬼)(二百三)
+
+芒娑訶哩泥(食肉鬼)(二百四)
+
+計陀訶哩泥(食脂鬼)(二百五)
+
+摩闍訶哩(輕呼)(去聲)泥(食髓鬼)(二百六)
+
+闍多訶哩泥(食氣鬼)(二百七)
+
+視吠哆訶哩泥(食壽命鬼)(二百八)
+
+婆多訶哩泥(食風鬼)(二百九)
+
+皤多訶哩喃阿輸遮訶哩泥(食不淨鬼)(二百一十)
+
+質多訶哩泥(食心鬼)(二百十一)帝衫薩毘衫(如是等眾)(二百十二)
+
+薩嚩揭囉訶喃(一切執祖鬼)(二百十三)
+
+毘地也(明呪藏)(二百十四)
+
+嗔陀夜彌(斬伐罪者)(二百十五)
+
+枳囉夜彌(二百十六)
+
+波哩跋囉斫迦羅(外道)(二百十七)
+
+訖哩(離枳反)(上)擔微地也(明呪藏)(二百十八)
+
+嗔陀夜彌(二百十九)
+
+枳囉夜彌(捕罰)(二百二十)
+
+茶枳尼(狐魅鬼)(二百二十一)
+
+訖哩擔微地也(明呪)(二百二十二)
+
+嗔陀夜彌枳囉夜彌(二百二十三)
+
+摩訶鉢輸鉢底夜(二百二十四)
+
+嚕陀囉(大自在天)(二百二十五)
+
+訖哩耽微地也(明呪)(二百二十六)
+
+嗔陀夜彌枳羅夜彌(二百二十七)
+
+那囉耶拏耶(天神)(二百二十八)
+
+訖哩耽微地也(明呪)(二百二十九)
+
+嗔陀夜彌枳囉夜彌(二百三十)
+
+怛怛嚩伽(上)嚕茶(金翅鳥王)(二百三十一)
+
+訖哩耽微地也(二百三十二)
+
+嗔陀夜彌枳羅夜彌(二百三十三)
+
+摩訶迦羅(大黑天神)(二百三十四)
+
+摩怛囉伽拏訖哩(離枳反)(上)耽微地也(二百三十五)
+
+嗔陀夜彌枳羅夜彌(二百三十六)
+
+迦波哩迦(髑髏外道)(二百三十七)
+
+訖哩耽微地也(二百三十八)
+
+嗔陀夜彌枳囉夜彌(二百三十九)
+
+闍夜羯囉(二百四十)
+
+曼度羯囉(二百四十一)
+
+薩婆囉他娑達儞(持一切物)(二百四十二)
+
+訖哩耽微地也(二百四十三)
+
+嗔陀夜彌枳囉夜彌(二百四十四)
+
+者都㗚(利吉反)薄祁儞(姊妹神女)(二百四十五)
+
+訖哩耽微地也(二百四十六)
+
+嗔陀夜彌(二百四十七)
+
+枳囉夜彌(二百四十八)
+
+憑(去)儀哩知(鬪戰勝神并器仗)(二百四十九)
+
+難泥(外道)雞首婆囉(孔雀王器仗)(二百五十)
+
+伽那鉢底(毘那夜迦王)(二百五十一)
+
+娑醯夜(野叉王兄弟三人各領二十八萬眾)(二百五十二)
+
+訖哩耽微地也(二百五十三)
+
+嗔陀夜彌(二百五十四)
+
+枳囉夜彌(二百五十五)
+
+那延那室囉(引)婆拏(裸形外道)(二百五十六)
+
+訖哩(離吉反)(皆同)耽微地也(二百五十七)
+
+嗔陀夜彌(二百五十八)
+
+枳囉夜彌(二百五十九)
+
+阿囉訶多(羅漢)(二百六十)
+
+訖哩耽微地也(二百六十一)
+
+嗔陀夜彌(二百六十二)
+
+枳囉夜彌(二百六十三)
+
+微怛(多音)囉(引)迦(起尸鬼)(二百六十四)
+
+訖哩耽微地也(二百六十五)
+
+嗔陀夜彌(二百六十六)
+
+枳囉夜彌(二百六十七)
+
+跋折(時熱反)囉波儞(執金剛神)(二百六十八)
+
+跋折囉婆(重呼)尼(二百六十九)
+
+具醯夜迦(密跡力士)(二百七十)
+
+地鉢底(總管)(二百七十一)
+
+訖哩耽微地也(二百七十二)
+
+嗔陀夜彌枳羅夜彌(二百七十三)
+
+囉叉囉叉罔(一切諸佛菩薩天仙龍神方護)(二百七十四)
+
+薄伽梵(佛)(二百七十五)
+
+印㝹那麼麼那寫(某乙寫)(二百七十六)
+
+婆伽梵薩怛他揭都烏瑟尼沙(二百七十七)
+
+悉怛多鉢怛囉(華蓋)(二百七十八)
+
+南無嗉(上)都(上)羝(頂禮)(二百七十九)
+
+阿悉多那(引)囉(引)囉迦(白光分明)(二百八十)
+
+鉢囉婆毘薩普吒(二百八十一)
+
+毘迦悉怛多(二百八十二)
+
+鉢底哩(二百八十三)
+
+什嚩囉什嚩囉(光焰)(二百八十四)
+
+陀囉陀囉(二百八十五)
+
+頻陀囉頻陀囉(二百八十六)
+
+嗔陀嗔陀(二百八十七)
+
+含吽含吽(二百八十八)
+
+泮泮泮(二百八十九)
+
+泮吒泮吒(二百九十)
+
+莎皤訶(二百九十一)
+
+醯醯泮(二百九十二)
+
+阿牟伽耶泮(不空大使)(二百九十三)
+
+阿鉢囉底訶多泮(無障礙)(二百九十四)
+
+皤囉鉢囉(二合)陀泮(與願)(二百九十五)
+
+阿素囉毘陀囉皤迦泮(修羅破壞)(二百九十六)
+
+薩皤提吠弊泮(一切天神)(二百九十七)
+
+薩皤那那伽弊泮(一切龍眾)(二百九十八)
+
+薩皤藥叉弊泮(一切勇鬼神)(二百九十九)
+
+薩皤乾闥婆弊泮(一切音樂神)(三百)
+
+薩皤阿素囉弊泮(三百一)
+
+薩皤揭嚕茶弊泮(三百二)
+
+薩皤緊那羅弊泮(三百三)
+
+薩皤摩護囉伽弊泮(三百四)
+
+薩皤囉剎莎弊泮(三百五)
+
+薩皤摩努曬弊泮(三百六)
+
+薩皤阿摩努曬弊泮(三百七)
+
+薩皤布單那弊泮(三百八)
+
+薩皤迦吒布丹那弊泮(三百九)
+
+薩皤突蘭枳帝弊泮(一切難過)(三百十)
+
+薩皤突瑟吒畢哩乞史帝弊泮(一切難)(三百十一)
+
+薩皤什皤梨弊泮(一切瘧壯熱)(三百十二)
+
+薩皤阿波薩麼嚟弊泮(一切外道出)(三百十三)
+
+薩婆奢羅皤拏弊泮(三百十四)
+
+薩嚩底㗚耻雞弊泮(三百十五)
+
+薩菩怛波提弊泮(一切鬼惡)(三百十六)
+
+薩皤微地也囉誓遮黎弊泮(一切持呪博士等)(三百十七)
+
+闍耶羯囉摩度羯囉(三百十八)
+
+薩婆囉他娑陀雞弊泮(一切物呪博士)(三百十九)
+
+微地也遮唎曳弊泮(三百二十)
+
+者咄囉南薄祁儞弊泮(四姊妹神女)(三百二十一)
+
+跋折囉俱摩唎迦弊泮(金剛童子)(三百二十二)
+
+跋折囉俱藍陀利弊泮(三百二十三)
+
+微地也囉(引)闍弊泮(呪王等)(三百二十四)
+
+摩訶鉢囉登耆囇弊泮(三百二十五)
+
+跋折囉商羯囉(引)夜泮(金剛連鎖)(三百二十六)
+
+鉢囉登祁囉囉(引)闍(引)耶泮(三百二十七)
+
+摩訶揭囉耶泮(大黑天神)(三百二十八)
+
+摩訶摩怛哩(二合)伽拏耶泮(鬼眾)(三百二十九)
+
+娜牟塞揭哩(二合)多耶泮(三百三十)
+
+毘瑟拏尾曳泮(毘紐天子)(三百三十一)
+
+皤囉𤙖摩尼曳泮(梵王)(三百三十二)
+
+阿祁尼曳泮(火天)(三百三十三)
+
+摩訶迦哩曳泮(大黑天女)(三百三十四)
+
+迦囉檀特曳泮(大鬼帥黑奧神)(三百三十五)
+
+瞖泥哩曳泮(帝釋)(三百三十六)
+
+遮文遲曳泮(怒神)(三百三十七)
+
+嘮怛哩曳泮(瞋怒神)(三百三十八)
+
+迦囉(引)怛哩曳泮(三百三十九)
+
+迦波嚟曳泮(三百四十)
+
+阿地目抧多迦尸麼舍那皤悉儞曳泮(三百四十一)
+
+曳髻者那薩怛薩怛皤(若有眾生)(三百四十二)
+
+突瑟吒質多(惡心鬼)(三百四十三)
+
+澇持囉質多(三百四十四)
+
+烏闍訶囉(食精氣鬼)(三百四十五)
+
+揭婆訶囉(食胎藏鬼)(三百四十六)
+
+嘮地囉訶囉(食血鬼)(三百四十七)
+
+芒娑訶囉(食肉鬼)(三百四十八)
+
+摩社訶囉(食產鬼)(三百四十九)
+
+社多訶囉(三百五十)
+
+視微多訶囉(食壽命鬼)(三百五十一)
+
+皤略耶訶囉(食祭鬼)(三百五十二)
+
+健陀訶囉(食香鬼)(三百五十三)
+
+布瑟波訶囉(食花鬼)(三百五十四)
+
+破囉訶囉(食五果子鬼)(三百五十五)
+
+薩寫訶囉(食五穀種子鬼)(三百五十六)
+
+波波質多突瑟吒(知諫反)質多(惡心鬼)(三百五十七)
+
+嘮陀羅質多(嗔心鬼)(三百五十八)
+
+陀囉質多藥叉揭囉訶(三百五十九)
+
+囉剎娑揭囉訶(三百六十)
+
+閉囇多揭囉訶毘舍遮揭囉訶(三百六十一)
+
+部多揭囉訶(神眾)(三百六十二)
+
+鳩槃茶揭囉訶(三百六十三)
+
+塞健陀揭囉訶(三百六十四)
+
+烏怛摩陀揭囉訶(三百六十五)
+
+車夜揭囉訶(影鬼)(三百六十六)
+
+阿波娑摩囉揭囉訶(羊嗔鬼鬼如野狐)(三百六十七)
+
+侘(坼阿反)(上)(長平呼)迦茶祁尼揭囉訶(魅鬼魅女鬼)(三百六十八)
+
+𠼝婆底揭囉訶(如狗惱小鬼)(三百六十九)
+
+闍弭迦揭囉訶(如烏鬼)(三百七十)
+
+舍俱尼揭囉訶(如馬)(三百七十一)
+
+漫怛囉難提迦揭囉訶(如猫兒)(三百七十二)
+
+阿藍皤揭囉訶(如蛇)(三百七十三)
+
+訶奴建度波尼揭囉訶(如雞)(三百七十四)
+
+什(入音)皤囉(壯熱瘧鬼)翳迦醯迦(一日一發)德吠底迦(二日一發)(三百七十五)
+
+帝哩帝藥迦(三日一發)折咄㗚他迦(四日一發)(三百七十六)
+
+眤底夜什皤囉(常壯熱鬼)(三百七十七)
+
+毘沙摩什皤囉(壯熱)(三百七十八)
+
+皤底迦(風病鬼)背底迦(黃病鬼)(三百七十九)
+
+室禮瑟彌迦(痰飲)(三百八十)
+
+娑儞波底迦(痢病)(三百八十一)
+
+薩皤什皤囉(一切壯熱)(三百八十二)
+
+室嚕喝囉底(頭痛)(三百八十三)
+
+阿羅陀皤帝(半頭痛)(三百八十四)
+
+阿乞史嚧劍(飢不食鬼)(三百八十五)
+
+目佉嚧鉗(口痛)(三百八十六)
+
+羯唎突嚧鉗(愁鬼)(三百八十七)
+
+羯囉訶輸藍(咽喉痛)(三百八十八)
+
+羯拏輸藍(耳痛)(三百八十九)
+
+檀多輸藍(齒痛)(三百九十)
+
+頡哩馱耶輸藍(心痛)(三百九十一)
+
+末摩輸藍(盧鉗反)(三百九十二)
+
+跋囉㗌婆輸藍(肋痛)(三百九十三)
+
+背哩瑟吒輸藍(背痛)(三百九十四)
+
+烏馱囉輸藍(盧鉗反)(腹痛)(三百九十五)
+
+羶知輸藍(腰痛)(三百九十六)
+
+跛悉帝輸藍(裸骨痛)(三百九十七)
+
+鄔(上)嚧輸藍(腿髀痛)(三百九十八)
+
+常伽輸藍(腕痛)(三百九十九)
+
+喝薩多輸藍(手痛)(四百)
+
+波陀輸藍(脚痛)(四百一)
+
+頞伽鉢囉登輸藍(四支節痛)(四百二)
+
+部多吠怛茶(起尸鬼)(四百三)
+
+茶枳(呼哽反)(上)尼(魅鬼)(四百四)
+
+什皤囉陀突盧建紐(四百五)
+
+吉知(蜘蛛)婆路多(丁瘡)(四百六)
+
+吠薩囉波嚕訶(侵淫瘡)凌(里孕反)伽(赤瘡)(四百七)
+
+輸沙多(引)囉娑那迦囉毘沙喻迦(上坎)(四百八)
+
+阿祁尼(火)烏陀迦(水)摩囉吠囉建多囉(四百九)
+
+阿迦囉蜜㗚(二合)駐(橫死)(四百十)
+
+怛囇部迦地哩囉吒毘失脂迦(蝎)(四百十一)
+
+薩囉波(蛇)(四百十二)
+
+那俱囉(虎狼)(四百十三)
+
+僧(思孕反)伽(師子)(四百十四)
+
+吠也揭囉(大虫)(四百十五)
+
+怛乞叉(猪熊)(四百十六)
+
+怛囉乞叉末囉(馬熊)視皤帝衫(此等)(四百十七)
+
+薩毘衫薩毘衫(一切此說者)(四百十八)
+
+悉怛多鉢怛囉(花蓋)(四百十九)
+
+摩訶跋折嚕(大金剛藏)(四百二十)
+
+瑟尼衫摩訶鉢囉登祁藍(四百二十一)
+
+夜婆埵陀舍喻社那(乃至十二由旬成界地)(四百二十二)
+
+便怛囇拏毘(入聲)地夜畔馱迦嚧彌(云我大明呪十二由旬結界禁縛莫入)(四百二十三)
+
+帝殊畔陀迦(居那反)嚧彌(佛頂光聚縛結不得入界)(四百二十四)
+
+波囉微地也(途迦反)畔陀迦嚧彌(能縛一切惡神鬼)(四百二十五)
+
+怛地他(即說呪曰)(四百二十六)
+
+唵(四百二十七)
+
+阿那㘑毘舍提(四百二十八)
+
+鞞囉(四百二十九)
+
+跋折囉(四百三十)
+
+阿唎畔陀(四百三十一)
+
+毘陀儞(四百三十二)
+
+跋折囉波尼泮(四百三十三)
+
+呼吽(四百三十四)
+
+咄嚕吽(三合)(四百三十五)
+
+莎皤訶(四百三十六)
+
+唵吽(四百三十七)
+
+毘嚕提(四百三十八)
+
+莎皤訶(四百三十九)
+
+（右此呪句總有四百三十九句。）
 
 
 阿難是(佛頂光聚悉怛多般怛啰)秘密伽陀微妙章句。
