--- a/kotlin/leetcode/2894.md
+++ b/kotlin/leetcode/2894.md
@@ -43,3 +43,7 @@ class Solution {
     fun differenceOfSums(n: Int, m: Int) = (1..n).fold(0){acc, num -> if (num % m == 0) acc - num else acc + num}
 }
 ```
+
+------
+
+- 回到 [leetcode 列表](index.md)
