--- a/kotlin/leetcode/1952.md
+++ b/kotlin/leetcode/1952.md
@@ -38,6 +38,24 @@ class Solution {
 }
 ```
 
+用 `when` 的解法
+
+```kotlin
+class Solution {
+    fun isThree(n: Int): Boolean {
+        var counter = 0
+
+        (1..n).forEach {
+            when {
+                n % it == 0 -> counter++
+                counter > 3 -> return false
+            }
+        }
+        return counter == 3
+    }
+}
+```
+
 ------
 
 回到 [leetcode 列表](index.md)
