--- a/kotlin/leetcode/27.md
+++ b/kotlin/leetcode/27.md
@@ -20,13 +20,13 @@ class Solution {
 ```kotlin
 class Solution {
     fun removeElement(nums: IntArray, `val`: Int): Int {
-        var l = 0
+        var count = 0
         nums.forEach {
             if (it != `val`) {
-                nums[l++] = it
+                nums[count++] = it
             }
         }
-        return l
+        return count
     }
 }
 ```
