--- a/kotlin/leetcode/977.md
+++ b/kotlin/leetcode/977.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun sortedSquares(nums: IntArray): IntArray = nums
@@ -28,6 +31,29 @@ class Solution {
         .toIntArray()
 }
 ```
+
+如果你不想要做 `toIntArray()`
+
+可以將回傳的型態轉換成 `List<Int>`
+
+```kotlin
+class Solution {
+    fun sortedSquares(nums: IntArray): List<Int> = nums
+        .map { it * it }
+        .sorted()
+}
+```
+
+或者直接省略 ``
+
+```kotlin
+class Solution {
+    fun sortedSquares(nums: IntArray) = nums
+        .map { it * it }
+        .sorted()
+}
+```
+</details>
 
 ------
 
