--- a/kotlin/leetcode/977.md
+++ b/kotlin/leetcode/977.md
@@ -18,6 +18,8 @@ class Solution {
 
 來處理陣列內的每個元素
 
+之後用 `sorted()` 進行排序
+
 ## Kotlin 參考解答
 
 <details>
@@ -44,7 +46,7 @@ class Solution {
 }
 ```
 
-或者直接省略 ``
+或者直接省略型別，讓 Kotlin 的編譯器自行判斷
 
 ```kotlin
 class Solution {
