--- a/kotlin/leetcode/191.md
+++ b/kotlin/leetcode/191.md
@@ -52,6 +52,26 @@ class Solution {
 }
 ```
 
+當然也可以使用 Kotlin 內建的 `countOneBits()`
+
+```kotlin
+class Solution {
+    fun hammingWeight(n: Int): Int {
+        return n.countOneBits()
+    }
+}
+```
+
+或者用 `Integer.bitCount()`
+
+```kotlin
+class Solution {
+    fun hammingWeight(n: Int): Int {
+        return Integer.bitCount(n)
+    }
+}
+```
+
 </details>
 
 
