--- a/kotlin/leetcode/191.md
+++ b/kotlin/leetcode/191.md
@@ -16,6 +16,20 @@ class Solution {
 考驗的是對 binary operation 的熟悉程度
 
 -----
+一個比較直覺的想法 
+
+是先宣告變數 count 為零
+
+將 n 和 1 做 and 運算
+
+如果結果為 1，代表最右邊的位元為一
+
+那麼 count 就加一，並且 n 右移一位
+
+否則就 n 直接右移一位
+
+-----
+除此之外
 
 我們可以發現數字 n 和數字 n-1
 
@@ -37,6 +51,24 @@ class Solution {
 
 <details>
   <summary>點擊展開解答</summary>
+
+```kotlin
+class Solution {
+    fun hammingWeight(n: Int): Int {
+        var number = n
+        var count = 0
+        for (i in 0..32) {
+            if (number and 1 == 1) {
+                count++
+            }
+            number = number shr 1
+        }
+        return count
+    }
+}
+```
+
+n and n-1 的做法
 
 ```kotlin
 class Solution {
