--- a/kotlin/leetcode/202.md
+++ b/kotlin/leetcode/202.md
@@ -30,6 +30,23 @@ class Solution {
 }
 ```
 
+如果不喜歡使用 ASCII 計算
+
+可以使用 Kotlin 內建的 `digitToInt()`
+
+```kotlin
+class Solution {
+    fun isHappy(n: Int): Boolean {
+        var r = n
+        while (r != 1 && r != 4) {
+            r = r.toString()
+                .sumBy { it.digitToInt() * it.digitToInt() }
+        }
+        return r == 1
+    }
+}
+```
+
 ------
 
 回到 [leetcode 列表](index.md)
