--- a/kotlin/leetcode/202.md
+++ b/kotlin/leetcode/202.md
@@ -17,6 +17,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun isHappy(n: Int): Boolean {
@@ -46,6 +49,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
