--- a/kotlin/leetcode/2220.md
+++ b/kotlin/leetcode/2220.md
@@ -23,7 +23,8 @@ class Solution {
 再算出到底有幾個 1 bit 即可
 
 ## Kotlin 參考解答
-
+<details>
+  <summary>點擊展開解答</summary>
 使用單個表達式的解法如下
 
 ```kotlin
@@ -45,6 +46,7 @@ class Solution {
     Integer.bitCount(start xor goal)
 }
 ```
+</details>
 
 ------
 
