--- a/kotlin/leetcode/231.md
+++ b/kotlin/leetcode/231.md
@@ -36,10 +36,7 @@ class Solution {
 ```kotlin
 class Solution {
     fun isPowerOfTwo(n: Int): Boolean {
-        if(n <= 0){
-            return false
-        }
-        return (n and (n-1)) == 0
+        return n > 0 && (n and (n-1)) == 0
     }
 }
 ```
@@ -51,6 +48,16 @@ class Solution {
     fun isPowerOfTwo(n: Int) = when {
         n <= 0 -> false
         else -> (n and (n-1)) == 0
+    }
+}
+```
+
+也可以用 `countOneBits()` 確認 n 裡面只有一個位元是 1
+
+```kotlin
+class Solution {
+    fun isPowerOfTwo(n: Int): Boolean {
+        return n > 0 && n.countOneBits() == 1
     }
 }
 ```
