--- a/kotlin/leetcode/1342.md
+++ b/kotlin/leetcode/1342.md
@@ -18,7 +18,14 @@ class Solution {
 
 就可以算出答案
 
+四則運算的部分由於很單純
+
+所以也可以使用位元運算進行
+
 ## Kotlin 參考解答
+
+<details>
+  <summary>點擊展開解答</summary>
 
 ```kotlin
 class Solution {
@@ -36,6 +43,27 @@ class Solution {
     }
 }
 ```
+
+將上述的四則運算改成位元運算的方式
+
+```kotlin
+class Solution {
+    fun numberOfSteps(num: Int): Int {
+        var privateNum = num
+        var numOfStepsToZero = 0
+        while (privateNum != 0) {
+            when (privateNum and 1) {
+                0 -> privateNum = privateNum shr 1
+                else -> privateNum--
+            }
+            numOfStepsToZero++
+        }
+        return numOfStepsToZero
+    }
+}
+```
+
+</details>
 
 ------
 
