--- a/kotlin/leetcode/1342.md
+++ b/kotlin/leetcode/1342.md
@@ -33,8 +33,8 @@ class Solution {
         var privateNum = num
         var numOfStepsToZero = 0
         while (privateNum != 0) {
-            when (privateNum % 2) {
-                0 -> privateNum /= 2
+            when {
+                privateNum % 2 == 0 -> privateNum /= 2
                 else -> privateNum -= 1
             }
             numOfStepsToZero++
@@ -52,8 +52,8 @@ class Solution {
         var privateNum = num
         var numOfStepsToZero = 0
         while (privateNum != 0) {
-            when (privateNum and 1) {
-                0 -> privateNum = privateNum shr 1
+            when {
+                privateNum and 1 == 0 -> privateNum = privateNum shr 1
                 else -> privateNum--
             }
             numOfStepsToZero++
