--- a/kotlin/leetcode/258.md
+++ b/kotlin/leetcode/258.md
@@ -38,9 +38,8 @@ class Solution {
 所以答案是 9
 
 以口語說明的解法如下：
-1. 如果輸入是 0，回傳 0
-2. 如果輸入是 9 的倍數，回傳 9
-3. 回傳輸入除以 9 的餘數
+1. 如果如果輸入不是 0，並且是 9 的倍數，回傳 9
+2. 回傳輸入除以 9 的餘數
 
 ## Kotlin 參考解答
 
@@ -49,10 +48,7 @@ class Solution {
 
 ```kotlin
 fun addDigits(num: Int): Int {
-    if (num == 0) {
-        return 0
-    }
-    if (num % 9 == 0) {
+    if (num != 0 && num % 9 == 0) {
         return 9
     }
     return num % 9
@@ -63,8 +59,7 @@ fun addDigits(num: Int): Int {
 
 ```kotlin
 fun addDigits(num: Int) = when {
-    num == 0 -> 0
-    num % 9 == 0 -> 9
+    num != 0 && num % 9 == 0 -> 9
     else -> num % 9
 }
 ```
