--- a/kotlin/leetcode/258.md
+++ b/kotlin/leetcode/258.md
@@ -47,20 +47,24 @@ class Solution {
   <summary>點擊展開解答</summary>
 
 ```kotlin
-fun addDigits(num: Int): Int {
-    if (num != 0 && num % 9 == 0) {
-        return 9
+class Solution {
+    fun addDigits(num: Int): Int {
+        if (num != 0 && num % 9 == 0) {
+            return 9
+        }
+        return num % 9
     }
-    return num % 9
 }
 ```
 
 利用 `when` 語法可以更加簡化這段程式
 
 ```kotlin
-fun addDigits(num: Int) = when {
-    num != 0 && num % 9 == 0 -> 9
-    else -> num % 9
+class Solution {
+    fun addDigits(num: Int) = when {
+        num != 0 && num % 9 == 0 -> 9
+        else -> num % 9
+    }
 }
 ```
 
