--- a/RFC-1149.md
+++ b/RFC-1149.md
@@ -1,14 +1,14 @@
-# RFC 1149 - 使用鳥類載體傳遞網路協定數據包（Datagrams）之標準
+## RFC 1149 - 使用鳥類載體傳遞網路協定數據包（Datagrams）之標準
 
 1990年四月一日
 
-## 本備忘錄狀態
+### 本備忘錄狀態
 本備忘錄說明使用鳥類載體封裝網路協定數據包之實驗性方法，此協定規範主要於都會區網路特別有用。
 
 此規範為實驗性，並非建議標準。本備忘錄的散播不受任何限制。
 
 
-## 概述和邏輯
+### 概述和邏輯
 鳥類載體可提供高延遲、低吞吐量和低海拔服務。每個載體的連接拓撲結構限制於單一點對點路徑。
 
 不過除了早春之外，可在傳輸時同時使用多個載體，載體之間不會有明顯的信號干擾。
@@ -21,7 +21,7 @@
 
 某些城市裡面，可以透過本協定進行連接導向式通訊服務，網絡連接方式通常為中央集線器拓撲結構。
 
-## 框架格式
+### 框架格式
 數據包印在一小卷紙上，格式為十六進位，每個字節以黑白物質區隔。
 
 之後將該紙卷纏繞於鳥類載體的一隻腳上，並使用一小段膠帶保護資料。
@@ -36,7 +36,7 @@
 
 
 
-## 討論
+### 討論
 透過特定的優先啄序，本協定可以提供多種服務。
 
 本協定附加的一個特性是自動內建的蠕蟲偵測以及移除。
@@ -49,14 +49,10 @@
 
 直到載體失效之前，會不斷重試傳輸。本傳輸方法會自動生成紀錄，通常可以在紀錄檔和纜線盤上面找到紀錄。
 
-
-
-## 安全性考量
+### 安全性考量
 正常操作下安全性不會是問題。但是當鳥類載體使用於戰爭中時，必須採取一些特別措施（像是資料加密）。
 
-
-
-## 作者資料
+### 作者資料
 David Waitzman
 
 BBN Systems and Technologies Corporation
