--- a/kotlin/leetcode/258.md
+++ b/kotlin/leetcode/258.md
@@ -38,13 +38,34 @@ class Solution {
 所以答案是 9
 
 以口語說明的解法如下：
-1. 如果如果輸入不是 0，並且是 9 的倍數，回傳 9
+1. 如果輸入不是 0，並且是 9 的倍數，回傳 9
 2. 回傳輸入除以 9 的餘數
 
 ## Kotlin 參考解答
 
 <details>
   <summary>點擊展開解答</summary>
+
+每個位數分開計算的寫法
+
+```kotlin
+class Solution {
+    fun addDigits(num: Int): Int {
+        var number = num
+        while (number >= 10) {
+            var sum = 0
+            while (number > 0) {
+                sum += number % 10
+                number /= 10 
+            }
+            number = sum
+        }   
+        return number
+    }
+}
+```
+
+使用 `if` 的寫法
 
 ```kotlin
 class Solution {
