--- a/佛教咒語/大悲咒梵語版.md
+++ b/佛教咒語/大悲咒梵語版.md
@@ -1,4 +1,4 @@
-| 行號 | 中 | 梵 | 天城 | 譯 |
+| <div style="width:50px">行號</div> | 中 | 梵 | 天城 | 譯 |
 |----|----|----|----|----|
 | １ | 南無喝囉怛那哆囉夜耶 | namo ratna trayāya | नमो रत्न त्रयाय | 禮敬三寶 |
 | ２ | 南無阿唎耶 | namo āryā | नमो आर्या | 禮敬聖 |
