--- a/kotlin/leetcode/100.md
+++ b/kotlin/leetcode/100.md
@@ -40,7 +40,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 
 if 的寫法
