--- a/kotlin/leetcode/101.md
+++ b/kotlin/leetcode/101.md
@@ -24,7 +24,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
-
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+    
 ```kotlin
 class Solution {
     fun isSymmetric(root: TreeNode?): Boolean {
@@ -66,7 +68,8 @@ class Solution {
     
 }
 ```
-
+</details>
+    
 ------
 
 回到 [leetcode 列表](index.md)
