--- a/kotlin/leetcode/1022.md
+++ b/kotlin/leetcode/1022.md
@@ -17,6 +17,8 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
 
 ```kotlin
 class Solution {
@@ -28,6 +30,8 @@ class Solution {
         }
 }
 ```
+
+</details>
 
 ------
 
