--- a/kotlin/leetcode/104.md
+++ b/kotlin/leetcode/104.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 /**
  * Example:
@@ -40,6 +43,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ----
 
