--- a/kotlin/leetcode/1051.md
+++ b/kotlin/leetcode/1051.md
@@ -27,7 +27,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 用 for 迴圈實作的方式
 
