--- a/kotlin/leetcode/1071.md
+++ b/kotlin/leetcode/1071.md
@@ -18,6 +18,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+    
 ```kotlin
 class Solution {
     fun gcdOfStrings(str1: String, str2: String): String {
@@ -31,6 +34,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
