--- a/kotlin/leetcode/110.md
+++ b/kotlin/leetcode/110.md
@@ -41,6 +41,9 @@ height-balanced 的條件有三個：
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 /**
  * Example:
@@ -66,6 +69,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
