--- a/kotlin/leetcode/1137.md
+++ b/kotlin/leetcode/1137.md
@@ -40,6 +40,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 使用陣列儲存內容的方式如下
 
 ```kotlin
@@ -53,6 +56,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
