--- a/kotlin/leetcode/12.md
+++ b/kotlin/leetcode/12.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun intToRoman(num: Int): String {
@@ -54,6 +57,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
