--- a/kotlin/leetcode/121.md
+++ b/kotlin/leetcode/121.md
@@ -17,6 +17,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 import kotlin.math.*  
   
@@ -37,6 +40,7 @@ class Solution {
 }
 ```
 
+</details>
 
 ------
 
