--- a/kotlin/leetcode/1221.md
+++ b/kotlin/leetcode/1221.md
@@ -18,6 +18,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun balancedStringSplit(s: String): Int {
@@ -37,6 +40,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
