--- a/kotlin/leetcode/1323.md
+++ b/kotlin/leetcode/1323.md
@@ -22,6 +22,10 @@ class Solution {
 簡單到可以用單個表達式串接在一起處理
 
 ## Kotlin 參考解答
+
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 單個表達式串接在一起處理的方式如下
 
 ```kotlin
@@ -30,6 +34,8 @@ class Solution {
         = num.toString().replaceFirst('6','9').toInt()
 }
 ```
+
+</details>
 
 ------
 
