--- a/kotlin/leetcode/136.md
+++ b/kotlin/leetcode/136.md
@@ -23,7 +23,7 @@ a xor num xor num = a
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 ```kotlin
 class Solution {
