--- a/kotlin/leetcode/1389.md
+++ b/kotlin/leetcode/1389.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun createTargetArray(nums: IntArray, index: IntArray): IntArray {
@@ -31,6 +34,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
