--- a/kotlin/leetcode/141.md
+++ b/kotlin/leetcode/141.md
@@ -30,6 +30,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+    
 ```kotlin
 class Solution {
     fun hasCycle(head: ListNode?): Boolean {
@@ -46,6 +49,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
