--- a/kotlin/leetcode/1431.md
+++ b/kotlin/leetcode/1431.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun kidsWithCandies(candies: IntArray, extraCandies: Int): BooleanArray {
@@ -32,6 +35,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
