--- a/kotlin/leetcode/1476.md
+++ b/kotlin/leetcode/1476.md
@@ -35,6 +35,9 @@ class SubrectangleQueries(rectangle: Array<IntArray>) {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class SubrectangleQueries(var rectangle: Array<IntArray>) {
 
@@ -50,6 +53,8 @@ class SubrectangleQueries(var rectangle: Array<IntArray>) {
 
 }
 ```
+
+</details>
 
 ------
 
