--- a/kotlin/leetcode/1480.md
+++ b/kotlin/leetcode/1480.md
@@ -17,6 +17,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+    
 ```kotlin
 class Solution {
     fun runningSum(nums: IntArray): IntArray {
@@ -29,6 +32,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
