--- a/kotlin/leetcode/1486.md
+++ b/kotlin/leetcode/1486.md
@@ -17,7 +17,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 單一表達式的解法如下
 
