--- a/kotlin/leetcode/151.md
+++ b/kotlin/leetcode/151.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun reverseWords(s: String): String = s.split(" ")
@@ -28,6 +31,8 @@ class Solution {
         .joinToString(separator = " ")
 }
 ```
+
+</details>
 
 ------
 
