--- a/kotlin/leetcode/153.md
+++ b/kotlin/leetcode/153.md
@@ -26,6 +26,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 leetcode 上的解答
 
 ```kotlin
@@ -41,6 +44,8 @@ class Solution {
     fun findMin(nums: IntArray) = nums.minOrNull()  
 }
 ```
+
+</details>
 
 ------
 
