--- a/kotlin/leetcode/1588.md
+++ b/kotlin/leetcode/1588.md
@@ -18,6 +18,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun sumOddLengthSubarrays(arr: IntArray): Int {
@@ -38,6 +41,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
