--- a/kotlin/leetcode/1603.md
+++ b/kotlin/leetcode/1603.md
@@ -22,6 +22,9 @@ class ParkingSystem(big: Int, medium: Int, small: Int) {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class ParkingSystem(var big: Int, var medium: Int, var small: Int) {
     fun addCar(carType: Int): Boolean = when (carType) {
@@ -33,6 +36,7 @@ class ParkingSystem(var big: Int, var medium: Int, var small: Int) {
 }
 ```
 
+</details>
 ------
 
 回到 [leetcode 列表](index.md)
