--- a/kotlin/leetcode/1662.md
+++ b/kotlin/leetcode/1662.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun arrayStringsAreEqual(word1: Array<String>, word2: Array<String>): Boolean =
@@ -37,6 +40,8 @@ class Solution {
     word1.joinToString("") == word2.joinToString("")
 }
 ```
+
+</details>
 
 ------
 
