--- a/kotlin/leetcode/1672.md
+++ b/kotlin/leetcode/1672.md
@@ -19,6 +19,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 單行之內處理完畢的寫法如下
 
 ```kotlin
@@ -27,6 +30,8 @@ class Solution {
         accounts.map { it.sum() }.max()
 }
 ```
+
+</details>
 
 ------
 
