--- a/kotlin/leetcode/1678.md
+++ b/kotlin/leetcode/1678.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 用 `replace()` 處理的作法如下
 
 ```kotlin
@@ -27,6 +30,8 @@ class Solution {
     fun interpret(command: String) = command.replace("()","o").replace("(al)","al")
 }
 ```
+
+</details>
 
 ------
 
