--- a/kotlin/leetcode/168.md
+++ b/kotlin/leetcode/168.md
@@ -19,6 +19,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 用 `while` 迴圈的參考作法如下
 
 ```kotlin
@@ -32,6 +35,8 @@ class Solution {
     }.reverse().toString()
 }
 ```
+
+</details>
 
 
 ------
