--- a/kotlin/leetcode/1689.md
+++ b/kotlin/leetcode/1689.md
@@ -40,6 +40,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 `forEach` 參考解法如下
 
 ```kotlin
@@ -91,6 +94,9 @@ class Solution {
     }.toString().toInt()
 }
 ```
+
+</details>
+
 
 ------
 
