--- a/kotlin/leetcode/169.md
+++ b/kotlin/leetcode/169.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun majorityElement(nums: IntArray) = nums
@@ -41,6 +44,9 @@ class Solution {
     
 }
 ```
+
+</details>
+
 
 ------
 
