--- a/kotlin/leetcode/171.md
+++ b/kotlin/leetcode/171.md
@@ -19,12 +19,18 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
+
 ```kotlin
 class Solution {
     fun titleToNumber(columnTitle: String): Int = 
         columnTitle.fold(0) { acc, ch -> 26 * acc + (ch - 'A').toInt() + 1 }
 }
 ```
+
+</details>
 
 ------
 
