--- a/kotlin/leetcode/1791.md
+++ b/kotlin/leetcode/1791.md
@@ -25,7 +25,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 單一表達式內完成的方式如下
 
