--- a/kotlin/leetcode/1816.md
+++ b/kotlin/leetcode/1816.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {  
     fun truncateSentence(s: String, k: Int): String =  
@@ -29,6 +32,8 @@ class Solution {
             .trim()  
 }
 ```
+
+</details>
 
 ------
 
