--- a/kotlin/leetcode/1832.md
+++ b/kotlin/leetcode/1832.md
@@ -15,6 +15,10 @@ class Solution {
 可以很簡單的用 `for` 或 `forEach` 解答
 
 ## Kotlin 參考解答
+
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 使用 `for` 的方式
 
 ```kotlin
@@ -40,6 +44,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
