--- a/kotlin/leetcode/1844.md
+++ b/kotlin/leetcode/1844.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 用 `mapIndexed` 的解法如下
 
 ```kotlin
@@ -33,6 +36,8 @@ class Solution {
         }.joinToString("")
 }
 ```
+
+</details>
 
 ------
 
