--- a/kotlin/leetcode/1952.md
+++ b/kotlin/leetcode/1952.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun isThree(n: Int): Boolean {
@@ -55,6 +58,8 @@ class Solution {
     }
 }
 ```
+
+<details>
 
 ------
 
