--- a/kotlin/leetcode/1979.md
+++ b/kotlin/leetcode/1979.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun findGCD(nums: IntArray): Int {
@@ -33,6 +36,7 @@ class Solution {
 }
 ```
 
+</details>
 
 ------
 
