--- a/kotlin/leetcode/1979.md
+++ b/kotlin/leetcode/1979.md
@@ -36,6 +36,19 @@ class Solution {
 }
 ```
 
+這邊的遞迴呼叫僅在最後一行，符合尾遞迴的格式，所以我們可以加上 `tailrec` 關鍵字
+
+```kotlin
+class Solution {
+    fun findGCD(nums: IntArray): Int {
+        return gcd(nums.min()!!, nums.max()!!)
+    }
+    tailrec fun gcd(p: Int, q: Int): Int {
+        return if (q == 0) p else gcd(q, p % q)
+    }
+}
+```
+
 </details>
 
 ------
