--- a/kotlin/leetcode/1979.md
+++ b/kotlin/leetcode/1979.md
@@ -49,6 +49,34 @@ class Solution {
 }
 ```
 
+另外我們可以使用迴圈來實作輾轉相除法的邏輯
+
+```kotlin
+class Solution {
+    fun findGCD(nums: IntArray): Int {
+        var numList = mutableListOf(nums.max()!!, nums.min()!!)
+        while (numList[1] != 0) {
+            numList = numList.run { mutableListOf(numList[1], numList[0] % numList[1])}
+        }
+        return numList[0]
+    }
+}
+```
+
+使用 Pair 來簡化我們撰寫的邏輯
+
+```kotlin
+class Solution {
+    fun findGCD(nums: IntArray): Int {
+        var numPair = nums.max()!! to nums.min()!!
+        while (numPair.second != 0) {
+            numPair = numPair.run { second to first % second }
+        }
+        return numPair.first
+    }
+}
+```
+
 </details>
 
 ------
