--- a/kotlin/leetcode/2000.md
+++ b/kotlin/leetcode/2000.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun reversePrefix(word: String, ch: Char): String {
@@ -28,6 +31,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
