--- a/kotlin/leetcode/2011.md
+++ b/kotlin/leetcode/2011.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun finalValueAfterOperations(A: Array<String>) = 
@@ -37,6 +40,8 @@ class Solution {
     2 * A.filter{ it == "X++" || it == "++X" }.size - A.size
 }
 ```
+
+</details>
 
 ------
 
