--- a/kotlin/leetcode/2037.md
+++ b/kotlin/leetcode/2037.md
@@ -16,6 +16,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 參考解法如下
 
 ```kotlin
@@ -31,6 +34,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
