--- a/kotlin/leetcode/205.md
+++ b/kotlin/leetcode/205.md
@@ -20,6 +20,10 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
+
 ```kotlin
 class Solution {
     fun isIsomorphic(s: String, t: String): Boolean {
@@ -60,6 +64,7 @@ class Solution {
 }
 ```
 
+</details>
 
 ------
 
