--- a/kotlin/leetcode/206.md
+++ b/kotlin/leetcode/206.md
@@ -28,7 +28,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 ```kotlin
 class Solution {
