--- a/kotlin/leetcode/2114.md
+++ b/kotlin/leetcode/2114.md
@@ -23,7 +23,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 我們可以用雙重迴圈來計算空白數
 
