--- a/kotlin/leetcode/2160.md
+++ b/kotlin/leetcode/2160.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {  
     fun minimumSum(num: Int): Int {  
@@ -40,6 +43,7 @@ class Solution {
 }
 ```
 
+</details>
 
 ------
 
