--- a/kotlin/leetcode/217.md
+++ b/kotlin/leetcode/217.md
@@ -19,6 +19,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 先用 `toList()` 將陣列轉換成 List
 
 然後使用 List 內建的函數處理
@@ -34,6 +37,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
