--- a/kotlin/leetcode/2235.md
+++ b/kotlin/leetcode/2235.md
@@ -20,11 +20,16 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun sum(num1: Int, num2: Int) = num1 + num2
 }
 ```
+
+</details>
 
 ------
 
