--- a/kotlin/leetcode/2236.md
+++ b/kotlin/leetcode/2236.md
@@ -18,6 +18,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 單一表示式的寫法如下
 
 ```kotlin
@@ -25,6 +28,8 @@ class Solution {
     fun checkTree(root: TreeNode?): Boolean = root?.`val` == root?.left?.`val`!! + root.right?.`val`!!
 }
 ```
+
+</details>
 
 ------
 
