--- a/kotlin/leetcode/225.md
+++ b/kotlin/leetcode/225.md
@@ -33,6 +33,9 @@ class MyStack() {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class MyStack() {
     private val first: Queue<Int> = ArrayDeque<Int>()
@@ -57,6 +60,8 @@ class MyStack() {
     }
 }
 ```
+
+</details>
 
 ------
 
