--- a/kotlin/leetcode/231.md
+++ b/kotlin/leetcode/231.md
@@ -23,7 +23,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 當一個數字 n 的二進位是 `1(0*)` 這樣的結構時
     
