--- a/kotlin/leetcode/2315.md
+++ b/kotlin/leetcode/2315.md
@@ -17,6 +17,10 @@ class Solution {
 可以很單純的利用 `split` 和 `mapIndexed` 等函數解答
 
 ## Kotlin 參考解答
+
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 用 `split` 和 `mapIndexed` 的解法如下
 
 ```kotlin
@@ -28,6 +32,8 @@ class Solution {
         }.sum()
 }
 ```
+
+</details>
 
 ---
 
