--- a/kotlin/leetcode/232.md
+++ b/kotlin/leetcode/232.md
@@ -54,6 +54,9 @@ class MyQueue() {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class MyQueue() {
     private val stack1 = Stack<Int>()
@@ -73,6 +76,8 @@ class MyQueue() {
 
 }
 ```
+
+</details>
 
 ------
 
