--- a/kotlin/leetcode/2325.md
+++ b/kotlin/leetcode/2325.md
@@ -17,6 +17,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun decodeMessage(key: String, message: String): String {
@@ -39,6 +42,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
