--- a/kotlin/leetcode/234.md
+++ b/kotlin/leetcode/234.md
@@ -19,6 +19,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 使用上面的演算法得到結果如下
 
 ```kotlin
@@ -34,6 +37,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
