--- a/kotlin/leetcode/2357.md
+++ b/kotlin/leetcode/2357.md
@@ -19,12 +19,17 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun minimumOperations(nums: IntArray) = 
     nums.distinct().count { it > 0 }
 }
 ```
+
+</details>
 
 ------
 
