--- a/kotlin/leetcode/2367.md
+++ b/kotlin/leetcode/2367.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun arithmeticTriplets(nums: IntArray, diff: Int): Int = nums.count {
@@ -29,6 +32,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
