--- a/kotlin/leetcode/2396.md
+++ b/kotlin/leetcode/2396.md
@@ -17,6 +17,10 @@ class Solution {
 可以用 `for` 或者 `forEach` 來進行處理
 
 ## Kotlin 參考解答
+
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 用 `for` 的解法如下
 
 ```kotlin
@@ -58,6 +62,9 @@ class Solution {
     fun isStrictlyPalindromic(n: Int): Boolean = false
 }
 ```
+
+</details>
+
 ------
 
 回到 [leetcode 列表](index.md)
