--- a/kotlin/leetcode/2418.md
+++ b/kotlin/leetcode/2418.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 參考解法如下
 
 ```kotlin
@@ -32,6 +35,7 @@ class Solution {
 }
 ```
 
+</details>
 
 ------
 
