--- a/kotlin/leetcode/242.md
+++ b/kotlin/leetcode/242.md
@@ -19,6 +19,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 單一表達式的方式如下
 
 ```kotlin
@@ -27,6 +30,8 @@ class Solution {
         s.toCharArray().sorted() == t.toCharArray().sorted()
 }
 ```
+
+</details>
 
 ------
 
