--- a/kotlin/leetcode/2469.md
+++ b/kotlin/leetcode/2469.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun convertTemperature(celsius: Double) = 
@@ -41,6 +44,8 @@ class Solution {
         )
 }
 ```
+
+</details>
 
 ------
 
