--- a/kotlin/leetcode/2520.md
+++ b/kotlin/leetcode/2520.md
@@ -26,6 +26,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun countDigits(num: Int): Int {
@@ -55,6 +58,9 @@ class Solution {
     }
 }
 ```
+
+</details>
+
 
 ------
 
