--- a/kotlin/leetcode/2535.md
+++ b/kotlin/leetcode/2535.md
@@ -19,6 +19,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun differenceOfSum(nums: IntArray): Int {
@@ -28,6 +31,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
