--- a/kotlin/leetcode/258.md
+++ b/kotlin/leetcode/258.md
@@ -44,7 +44,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 每個位數分開計算的寫法
 
